--- a/public/css/variables.css
+++ b/public/css/variables.css
@@ -8,6 +8,7 @@
 	--app-controls-extra: 9px;
 
 	--explorer-side-size: 176px;
+	font-size: 16px;
 }
 
 
